# century-spice-road-env

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
century_env/: __init__.py  cards.py  constants.py  env.py  masks.py  mechanics.py  registration.py  render.py  rewards.py  specs.py  termination.py  transitions.py  types.py
century_env/agents/: __init__.py  random_agent.py
century_env/tests/: __init__.py  conftest.py  test_constants.py  test_env.py  test_jit.py  test_masks.py  test_mechanics.py  test_training.py  test_transitions.py
docs/: Century_-_Spice_Road_-_Cards_analysis.xlsx
